--- a/.github/workflows/github-actions-access-plan.yml
+++ b/.github/workflows/github-actions-access-plan.yml
@@ -1,23 +1,29 @@
-name: github-actions-role apply terraform
+name: github-actions-access plan terraform
 
 on:
-  push:
-    branches:
-      - main
+  pull_request:
     paths:
-      - .github/workflows/github-actions-role-apply.yml
-      - terraform/services/github-actions-role/**
+      - .github/workflows/github-actions-access-plan.yml
+      - terraform/services/github-actions-access/**
   workflow_dispatch: # Allow manual trigger
 
 jobs:
-  terraform-apply:
+  check-terraform-fmt:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./actions/setup-tfenv-terraform
+      - run: terraform fmt -check -diff -recursive terraform/services/github-actions-access
+
+  terraform-plan:
+    needs: check-terraform-fmt
     permissions:
       contents: read
       id-token: write
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./terraform/services/github-actions-role
+        working-directory: ./terraform/services/github-actions-access
     strategy:
       fail-fast: false
       matrix:
@@ -36,15 +42,7 @@ jobs:
           role-to-assume: arn:aws:iam::${{ matrix.app == 'ab2d' && secrets[format('{0}_{1}_ACCOUNT', matrix.app, matrix.env)] || secrets.BCDA_ACCOUNT }}:role/delegatedadmin/developer/${{ matrix.app }}-${{ matrix.env }}-github-actions
           aws-region: ${{ vars.AWS_REGION }}
       - run: terraform init -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}.s3.tfbackend
-      - run: terraform apply -auto-approve
+      - run: terraform plan
         env:
           TF_VAR_app: ${{ matrix.app }}
           TF_VAR_env: ${{ matrix.env }}
-      - uses: slackapi/slack-github-action@v1.26.0
-        if: ${{ failure() }}
-        with:
-          channel-id: 'C04UG13JF9B'
-          slack-message: "Terraform apply failure: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-
