--- a/.github/workflows/service-security-groups-apply.yml
+++ b/.github/workflows/service-security-groups-apply.yml
@@ -1,29 +1,23 @@
-name: zscaler-security-groups plan terraform
+name: service-security-groups apply terraform
 
 on:
-  pull_request:
+  push:
+    branches:
+      - main
     paths:
-      - .github/workflows/zscaler-security-groups-plan.yml
-      - terraform/services/zscaler-security-groups/**
+      - .github/workflows/service-security-groups-apply.yml
+      - terraform/services/service-security-groups/**
   workflow_dispatch: # Allow manual trigger
 
 jobs:
-  check-terraform-fmt:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./actions/setup-tfenv-terraform
-      - run: terraform fmt -check -diff -recursive terraform/services/zscaler-security-groups
-
-  terraform-plan:
-    needs: check-terraform-fmt
+  terraform-apply:
     permissions:
       contents: read
       id-token: write
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./terraform/services/zscaler-security-groups
+        working-directory: ./terraform/services/service-security-groups
     strategy:
       fail-fast: false
       matrix:
@@ -40,7 +34,15 @@ jobs:
           role-to-assume: arn:aws:iam::${{ matrix.app == 'ab2d' && secrets[format('{0}_{1}_ACCOUNT', matrix.app, matrix.env)] || secrets.BCDA_ACCOUNT }}:role/delegatedadmin/developer/${{ matrix.app }}-${{ matrix.env }}-github-actions
           aws-region: ${{ vars.AWS_REGION }}
       - run: terraform init -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}.s3.tfbackend
-      - run: terraform plan
+      - run: terraform apply -auto-approve
         env:
           TF_VAR_app: ${{ matrix.app }}
           TF_VAR_env: ${{ matrix.env }}
+      - uses: slackapi/slack-github-action@v1.26.0
+        if: ${{ failure() }}
+        with:
+          channel-id: 'C04UG13JF9B'
+          slack-message: "Terraform apply failure: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+
