--- a/.github/workflows/external-services-ip-sets-sync.yml
+++ b/.github/workflows/external-services-ip-sets-sync.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         env: [test]
-        app: [bcda]
+        app: [ab2d, bcda, dpc]
     steps:
       - name: Checkout Platform Repository
         uses: actions/checkout@v4
