--- a/.github/workflows/api-rds-apply.yml
+++ b/.github/workflows/api-rds-apply.yml
@@ -39,6 +39,7 @@ jobs:
           AWS_REGION: ${{ vars.AWS_REGION }}
         with:
           params: |
+            TF_VAR_jenkins_security_group_id=/jenkins/security-group
             TF_VAR_mgmt_vpc_cidr=/mgmt/vpc-cidr
       - run: terraform apply -auto-approve
         env:
