--- a/.github/workflows/api-rds-plan.yml
+++ b/.github/workflows/api-rds-plan.yml
@@ -45,6 +45,7 @@ jobs:
           AWS_REGION: ${{ vars.AWS_REGION }}
         with:
           params: |
+            TF_VAR_jenkins_security_group_id=/jenkins/security-group
             TF_VAR_mgmt_vpc_cidr=/mgmt/vpc-cidr
       - run: terraform plan
         env:
