--- a/.github/workflows/api-rds-apply.yml
+++ b/.github/workflows/api-rds-apply.yml
@@ -23,6 +23,9 @@ jobs:
       matrix:
         app: [ab2d, bcda]
         env: [dev, test, sbx, prod]
+        include:
+          - app: dpc
+            env: test
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
