--- a/.github/workflows/api-rds-plan.yml
+++ b/.github/workflows/api-rds-plan.yml
@@ -29,6 +29,9 @@ jobs:
       matrix:
         app: [ab2d, bcda]
         env: [dev, test, sbx, prod]
+        include:
+          - app: dpc
+            env: test
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
