--- a/.github/workflows/external-services-ip-sets-sync.yml
+++ b/.github/workflows/external-services-ip-sets-sync.yml
@@ -15,8 +15,11 @@ jobs:
         shell: bash
     strategy:
       matrix:
-        env: [test]
-        app: [ab2d, bcda] # DPC is not required since external services IP set is shared with BCDA.
+        app: [ab2d]
+        env: [mgmt, dev, test, sbx, prod]
+        include:
+        - app: bcda
+          env: mgmt
     steps:
       - name: Checkout Platform Repository
         uses: actions/checkout@v4
