Expanding external services sync matrix to include AB2D sbx.

--- a/.github/workflows/external-services-ip-sets-sync.yml
+++ b/.github/workflows/external-services-ip-sets-sync.yml
@@ -16,10 +16,10 @@ jobs:
     strategy:
       matrix:
         app: [ab2d]
-        env: [mgmt, dev, test]
+        env: [mgmt, dev, test, sbx]
         include:
         - app: bcda
-          env: mgmt
+          env: prod
     steps:
       - name: Checkout Platform Repository
         uses: actions/checkout@v4
