--- a/actions/setup-tfenv-terraform/action.yml
+++ b/actions/setup-tfenv-terraform/action.yml
@@ -13,7 +13,7 @@ runs:
           echo "tfenv already installed, skipping"
         else
           TMPDIR=$(mktemp -d)
-          git clone --depth=1 https://github.com/tfutils/tfenv.git $TMPDIR
+          git clone --depth=1 --branch v3.0.0 https://github.com/tfutils/tfenv.git $TMPDIR
           mv $TMPDIR ~/.tfenv
           echo "PATH=$HOME/.tfenv/bin:$PATH" >> "$GITHUB_ENV"
         fi
