--- a/.github/workflows/api-rds-apply.yml
+++ b/.github/workflows/api-rds-apply.yml
@@ -26,6 +26,9 @@ jobs:
         include:
           - app: dpc
             env: test
+            include:
+          - app: dpc
+            env: test
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
