--- a/.github/workflows/tfstate-apply.yml
+++ b/.github/workflows/tfstate-apply.yml
@@ -1,10 +1,11 @@
 name: Terraform apply for tfstate
 
 on:
-  inputs:
-    legacy:
-      required: true
-      type: boolean
+  workflow_call:
+    inputs:
+      legacy:
+        required: true
+        type: boolean
   push:
     branches:
       - main
