--- a/.github/workflows/github-actions-role-gf.yml
+++ b/.github/workflows/github-actions-role-gf.yml
@@ -1,9 +1,10 @@
-name: github-actions-role plan terraform
+name: github-actions-role tf
 
 on:
+  push:
   pull_request:
     paths:
-      - .github/workflows/github-actions-role-plan.yml
+      - .github/workflows/github-actions-role-gf.yml
       - terraform/services/github-actions-role/**
   workflow_dispatch: # Allow manual trigger
 
@@ -20,24 +21,30 @@ jobs:
     permissions:
       contents: read
       id-token: write
-    runs-on: ubuntu-latest
+    runs-on: codebuild-runner-cdap-container-${{github.run_id}}-${{github.run_attempt}}
     defaults:
       run:
         working-directory: ./terraform/services/github-actions-role
     strategy:
       fail-fast: false
       matrix:
-        app: [ab2d, bcda, dpc]
-        env: [dev, test, sbx, prod, mgmt]
+        #app: [ab2d, bcda, dpc]
+        #env: [dev, test, sandbox, prod]
+        #include:
+        #  - app: cdap
+        #    env: mgmt
+        app: [cdap]
+        env: [mgmt]
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
       - uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ matrix.app == 'ab2d' && secrets[format('{0}_{1}_ACCOUNT', matrix.app, matrix.env)] || secrets.BCDA_ACCOUNT }}:role/delegatedadmin/developer/${{ matrix.app }}-${{ matrix.env }}-github-actions
+          role-to-assume: arn:aws:iam::${{ contains(fromJSON('["dev", "test"]'), matrix.env) && secrets.NON_PROD_ACCOUNT || secrets.PROD_ACCOUNT }}:role/delegatedadmin/developer/${{ matrix.app }}-${{ matrix.env }}-github-actions
           aws-region: ${{ vars.AWS_REGION }}
-      - run: terraform init -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}.s3.tfbackend
+      - run: terraform init -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}-gf.s3.tfbackend
       - run: terraform plan
         env:
           TF_VAR_app: ${{ matrix.app }}
           TF_VAR_env: ${{ matrix.env }}
+          TF_VAR_legacy: "false"
