--- a/.github/workflows/tf-github-actions-role.yml
+++ b/.github/workflows/tf-github-actions-role.yml
@@ -55,5 +55,5 @@ jobs:
           TF_VAR_app: ${{ matrix.app }}
           TF_VAR_env: ${{ matrix.env }}
           TF_VAR_legacy: "false"
-      - if: inputs.apply == true || (github.event_name == 'push' && github.ref == 'refs/heads/main')
+      - if: inputs.apply == true || github.ref == 'refs/heads/main'
         run: terraform apply -auto-approve tf.plan
