--- a/actions/setup-tfenv-terraform/action.yml
+++ b/actions/setup-tfenv-terraform/action.yml
@@ -14,7 +14,8 @@ runs:
         else
           TMPDIR=$(mktemp -d)
           git clone --depth=1 --branch v3.0.0 https://github.com/tfutils/tfenv.git $TMPDIR
-          echo "$TMPDIR/bin" >> "$GITHUB_PATH"
+          mv $TMPDIR ~/.tfenv
+          echo "PATH=$HOME/.tfenv/bin:$PATH" >> "$GITHUB_ENV"
         fi
       shell: bash
 
