--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
 # These owners will be the default for everything in
 # the repo unless a later match takes precedence.
-* @CMSgov/cdap
+* @CMSgov/ab2d-bcda-dpc-platform
