--- a/.github/workflows/tf-opt-out-export.yml
+++ b/.github/workflows/tf-opt-out-export.yml
@@ -39,10 +39,7 @@ jobs:
       fail-fast: false
       matrix:
         app: [bcda, dpc]
-        env: [test, prod]
-        include:
-          - env: dev
-            app: bcda
+        env: [test, bcda, prod]
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
