--- a/.github/workflows/tf-opt-out-import.yml
+++ b/.github/workflows/tf-opt-out-import.yml
@@ -39,7 +39,7 @@ jobs:
       fail-fast: false
       matrix:
         app: [bcda, dpc]
-        env: [test, bcda, prod]
+        env: [test, dev, prod]
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
