--- a/.github/workflows/tf-opt-out-import.yml
+++ b/.github/workflows/tf-opt-out-import.yml
@@ -39,9 +39,9 @@ jobs:
       fail-fast: false
       matrix:
         app: [bcda, dpc]
-        env: [test]
+        env: [test, dev]
         include:
-          - env: dev
+          - env: prod
             app: bcda
     steps:
       - uses: actions/checkout@v4
